fix row body left alignment

--- a/src/main/com.sonicle.webtop.mail/laf/nethesis/service-nethesis.css
+++ b/src/main/com.sonicle.webtop.mail/laf/nethesis/service-nethesis.css
@@ -177,7 +177,7 @@
 }
 
 .wtmail-row-body.wtmail-row-body-threaded .x-grid-rowbody {
-	padding-left: 120px !important;
+	padding-left: 105px !important;
 }
 
 .wtmail-row-body .x-grid-rowbody > SPAN {
